// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkTab Tests Snapshot Testing External Tab 1`] = `
<ForwardRef(Tab)
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapped": "linkText",
    }
  }
  component="a"
  href="https://cgi.com"
  label="sample"
  target="_self"
/>
`;

exports[`LinkTab Tests Snapshot Testing External Tab with Open In New Tab 1`] = `
<ForwardRef(Tab)
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapped": "linkText",
    }
  }
  component="a"
  href="https://rijkswaterstaat.nl"
  label="sample"
  rel="noreferrer noopener"
  target="_blank"
/>
`;

exports[`LinkTab Tests Snapshot Testing Required Props 1`] = `
<ForwardRef(Tab)
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapped": "linkText",
    }
  }
  component={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "innerRef": [Function],
        "onClick": [Function],
        "replace": [Function],
        "target": [Function],
        "to": [Function],
      },
      "render": [Function],
    }
  }
  label="sample"
  to="/root"
/>
`;
